--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -287,6 +287,19 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="HdmiSettings"
+                android:label="@string/hdmi_settings"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.android.settings.HDMI_SETTINGS" />
+                <action android:name="android.settings.HDMI_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name="DisplaySettings"
                 android:label="@string/display_settings"
                 android:clearTaskOnLaunch="true"
@@ -765,6 +778,12 @@
                  <data android:scheme="android_secret_code" android:host="4636" />
             </intent-filter>
        </receiver>
+
+        <receiver android:name="HdmiReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
         <!-- Standard picker for widgets -->
         <activity android:name="AppWidgetPickActivity"
