--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,14 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="DefaultFontSettings"
+                 android:label="@string/font">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <!-- Settings -->
 
         <activity android:name="Settings"
