--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -65,6 +65,7 @@
     <uses-permission android:name="android.permission.SET_TIME" />
 
     <application android:label="@string/settings_label"
+            android:name=".Screenshot"
             android:icon="@mipmap/ic_launcher_settings"
             android:taskAffinity=""
             android:theme="@android:style/Theme.Holo"
