--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:label="@string/settings_label"
+            android:theme="@*android:style/Theme.NoTitleBar.Fullscreen"
             android:icon="@drawable/ic_launcher_settings"
             android:taskAffinity="">
 
@@ -55,6 +56,7 @@
                 android:label="@string/settings_label_launcher"
                 android:taskAffinity="com.android.settings"
                 android:clearTaskOnLaunch="true"
+                android:theme="@style/sys_set_preacitivity"
                 android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -75,6 +77,7 @@
 
         <activity android:name="WirelessSettings"
                 android:label="@string/wireless_networks_settings_title"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -92,6 +95,7 @@
                 android:label="@string/wifi_settings"
                 android:configChanges="orientation|keyboardHidden"
                 android:clearTaskOnLaunch="true"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -211,6 +215,7 @@
         </activity>
 
         <activity android:name="DateTimeSettings" android:label="@string/date_and_time"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -245,6 +250,7 @@
         <activity android:name="LanguageSettings"
                 android:label="@string/language_keyboard_settings_title"
                 android:clearTaskOnLaunch="true"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -279,6 +285,7 @@
         <activity android:name="SoundSettings"
                 android:label="@string/sound_settings"
                 android:clearTaskOnLaunch="true"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -306,6 +313,7 @@
         <activity android:name="DisplaySettings"
                 android:label="@string/display_settings"
                 android:clearTaskOnLaunch="true"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -331,6 +339,7 @@
         </activity>
 
         <activity android:name="DeviceInfoSettings" android:label="@string/device_info_settings"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -359,6 +368,7 @@
         </activity>
 
         <activity android:name="ApplicationSettings" android:label="@string/applications_settings_header"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -458,6 +468,7 @@
                 android:label="@string/privacy_settings_title"
                 android:configChanges="orientation|keyboardHidden"
                 android:clearTaskOnLaunch="true"
+                android:theme="@style/child_set_preacitivity"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -565,6 +576,7 @@
         <activity android:name="ZoneList" android:label="@string/choose_timezone" />
 
         <activity android:name=".deviceinfo.Status" android:label="@string/device_status_activity_title"
+                android:theme="@style/child_set_preacitivity"
                 android:process="com.android.phone">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -574,6 +586,7 @@
         </activity>
 
         <activity android:name=".deviceinfo.Memory"
+                android:theme="@style/memory_set_preacitivity"
                 android:label="@string/storage_settings_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -636,6 +649,7 @@
         </activity>
 
         <activity android:name="DevelopmentSettings"
+                android:theme="@style/child_set_preacitivity"
                 android:label="@string/development_settings_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -872,5 +886,7 @@
                 <data android:scheme="file" />
             </intent-filter>
         </receiver>
+
+        <service android:name="InfoService" android:enabled="true" />
     </application>
 </manifest>
